# PlaneDepth

./: README.md  pyproject.toml  utils.py
config/: __init__.py  conf.py  local_conf.yaml  train_conf.yaml
datasets/: kitti_dataset.py  mono_dataset.py
evaluation/: evaluate_depth.py  evaluate_depth_HR.py
local/: local_trainer.py
networks/: __init__.py  denseaspp.py  depth_decoder.py  fal_net.py  layers.py  loss.py  monov2_decoder.py  plade_net.py  pose_net.py  resnet_encoder.py
splits/eigen_raw/: export_gt_depth.py
train/: trainer.py
