[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PlaneDepth"
dynamic = ["version"]
authors = [
    { name = "ionut-grigore99", email = "ionut.orlando@yahoo.com" }
]

description = "Self-supervised Depth Estimation via Orthogonal Planes."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "ipython==8.11.0",
    "matplotlib==3.5.0",
    "numpy==1.21.2",
    "opencv-python==4.5.5.62",
    "Pillow==9.4.0",
    "six==1.16.0",
    "scikit-image==0.18.3",
    "tensorboardX==2.6"
]

[project.optional-dependencies]
dev = [
    "torch==1.12.0",
    "torchvision==0.13.0",
    "imgaug==0.4.0",
    "matplotlib==3.7.1"
]

[tool.setuptools.packages.find]
include = ["PlaneDepth"]
exclude = ["notebooks", "scripts"]

